# sherry_agent

./: .env  .env.example  .gitignore  README.md  README.zh.md  TODOList.md  TODOList.zh.md  channels.json  curator.yaml  introduce.md  introduce.zh.md  plan.txt  pyproject.toml  requirements.txt  start.sh  summarization.py
README/: README.md  README.zh.md
agent/: __init__.py  core.py  smart_tool_node.py
agent/checkpointer/: __init__.py  async_sqlite_checkpointer.py  thread_safe_checkpointer.py
agent/codeact/: __init__.py  ast_rewrite.py  core.py  utils.py
agent/middlewares/: README.md  README.zh.md  __init__.py  compression_guard.py  context_engine.py  context_engine_hook.py  error_classifier.py  heartbeat_staleness.py  iteration_budget.py  multimodal_processor.py  retry_backoff.py  retry_guard.py  summarization.py  tool_call_normalize.py  tool_guardrails.py  tool_loop_prevention.py  tool_timeout.py
agent/tools/: __init__.py  mcp_plugin.py  memory.py  message_search.py  (+5 more)
bus/: __init__.py  core.py  events.py  queue.py
channels/: README.md  README.zh.md  __init__.py  base.py  manager.py  qq.py  registry.py
client/: core.py
client_future/: .env.example  README.md  README.zh.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  prettier.config.mjs  tailwind.config.js
client_future/src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
client_future/src-tauri/capabilities/: default.json
client_future/src-tauri/src/: lib.rs
client_future/src-tauri/src/commands/: agent.rs  character.rs  events.rs  mod.rs  session.rs  system.rs  system_prompt.rs
client_future/src-tauri/src/services/: mod.rs  python_bridge.rs  python_process.rs
client_future/src-tauri/src/utils/: config.rs  error.rs  logger.rs
config/: __init__.py  character.py  num.py  path.py  schema.py
context_engine/: README.md  README.zh.md  __init__.py  core.py  pre_builder.py
cron/: __init__.py  core.py  types.py
future/: test-live2D.py  test.py
future_subagent/: README.md  README.zh.md  __init__.py  config.py
heartbeat/: README.md  README.zh.md  __init__.py  core.py  evaluate.py
logs/: logger.py
models/: ITTT_model.py  ITT_model.py  VTTT_model.py  __init__.py  chat_model.py  extract_model.py  reasoner_model.py  simple_chat_model.py  vl_model.py
pub_func/: __init__.py  atomic_replace.py  build_agent_config.py  cjk.py  current_time_str.py  extract_text_from_content.py  generate_tsid.py  path.py  process_sse_data.py  rand_str_to_int.py  run_async.py  string_to_unique_int.py  transcript_repair.py
rag/: __init__.py  base.py  core.py
runtime/: __init__.py  _callback_executor.py  core.py  count_call_register.py  count_register.py  relation_register.py  state_register.py  timer_call_register.py  timer_register.py
server/: __main__.py
sessions/: __init__.py  store.py
skills/: __init__.py  loader.py  skills_snapshot.py
subagent/: core.py
tests/: __main__.py  conftest.py  test-langextract.py  test.py  test_demo.py  test_rag.py
tools/: __init__.py  cron.py  mcp_plugin.py  memory.py  message_search.py  patch_file.py  python_repl.py  read_file.py  search_files.py  subagent.py  terminal.py  web_search.py  write_file.py
type/: __init__.py  bus.py  client.py  message.py
workspace/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  USER.md  __init__.py  character.json  prompt_builder.py
(+610 files in other folders)
