[project]
name = "ema-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.1.0",
    "langchain-experimental>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "leidenalg>=0.12.0",
    "lightrag-hku>=1.5.0",
    "live2d-py>=0.7.0.4",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "pyqt6>=6.11.0",
    "qq-botpy>=1.2.1",
    "raganything[all]>=1.3.1",
    "robyn>=0.84.0",
    "sentence-transformers>=5.5.1",
    "snkv>=0.7.3",
    "streamlit>=1.58.0",
    "torchvision>=0.27.0",
    "websocket-client>=1.9.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
