[package]
name = "ema-ai-agent"
version = "0.1.0"
description = "A deep role-playing AI Agent built on LangGraph and multimodal technology. Features long-term memory, dynamic skill system, and multi-channel access."
authors = ["EMA AI Agent Team"]
license = "MIT"
repository = "https://github.com/lasertsole/EMA_AI_agent"
edition = "2021"
rust-version = "1.94"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.17", features = [] }
tracing = "0.1.44"
tauri-plugin-tracing = "0.3.4"
thiserror = "2.0.18"
anyhow = "1.0.102"
ts-rs = "12.0.1"
